force-app/main/default/objects/FieloPLT__Tracker__c/fields/Mission__c.field-meta.xml
<CustomField>
    <fullName>Mission__c</fullName>
    <formula>FieloPLT__MissionMember__r.FieloPLT__Mission__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mission</label>
    <type>Text</type>
</CustomField>