force-app/main/default/objects/FieloPLT__Tracker__c/fields/Sticking_Code__c.field-meta.xml
<CustomField>
    <fullName>Sticking_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sticking Code</label>
    <referenceTo>Fielo_sticking_code__c</referenceTo>
    <relationshipLabel>Trackers</relationshipLabel>
    <relationshipName>Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>