force-app/main/default/objects/FieloPLT__Tracker__c/fields/Yearly_Crop__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Crop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Yearly Crop</label>
    <referenceTo>Fielo_Yearly_Crop__c</referenceTo>
    <relationshipLabel>Trackers</relationshipLabel>
    <relationshipName>Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>